adding facebook like and twitter follow for page

--- a/css/main.css
+++ b/css/main.css
@@ -1064,7 +1064,6 @@ article a {
   .bottom-closer .inner {
     width: 100%;
     position: relative;
-    z-index: 99;
     max-width: 640px;
     padding: 120px 0 90px;
     text-align: center;
@@ -1132,3 +1131,10 @@ pre {
     border: 0;
     padding-right: 0;
     padding-left: 0; }
+
+.fb-like {
+  vertical-align: middle !important; }
+
+.twitter-follow-button {
+  vertical-align: bottom !important;
+  margin-left: 10px; }
